--- a/angular.json
+++ b/angular.json
@@ -32,11 +32,15 @@
             "styles": [
               "src/styles.scss",
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "./node_modules/alertifyjs/build/css/alertify.min.css",
+                "./node_modules/alertifyjs/build/css/themes/semantic.min.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/jquery/dist/jquery.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/alertifyjs/build/alertify.min.js"
+
             ]
           },
           "configurations": {
