--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                 "./node_modules/alertifyjs/build/css/alertify.min.css",
-                "./node_modules/alertifyjs/build/css/themes/semantic.min.css"
+                "./node_modules/alertifyjs/build/css/themes/semantic.min.css",
+                "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
