--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,11 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                 "./node_modules/alertifyjs/build/css/alertify.min.css",
                 "./node_modules/alertifyjs/build/css/themes/semantic.min.css",
-                "./node_modules/ngx-toastr/toastr.css"
-            ],
+                "./node_modules/ngx-toastr/toastr.css",
+                "./node_modules/ngx-spinner/animations/ball-clip-rotate-multiple.css",
+                "./node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+                "./node_modules/ngx-spinner/animations/line-spin-fade.css"
+              ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "./node_modules/jquery/dist/jquery.min.js",
