--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@microsoft/signalr": "^8.0.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
