--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "ngx-file-drop": "^16.0.0",
+    "ngx-scanner-qrcode": "^1.6.7",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
